fix weird little spacing issue w/ xlist

--- a/less/pl-objects.less
+++ b/less/pl-objects.less
@@ -218,7 +218,7 @@ ul.tabbed-list {
  ***********************************/
 	.pl-vignette {
 	  	position: relative;
-		display: inline-block;
+		display: block;
 		&:after{
 			box-shadow: inset 0 0 8px rgba(0,0,0,.2);
 			position: absolute;
